--- a/package.json
+++ b/package.json
@@ -33,13 +33,16 @@
   ],
   "devDependencies": {
     "chai": "^3.5.0",
-    "eslint": "^3.9.1",
-    "eslint-config-screwdriver": "^2.0.9",
+    "eslint": "^4.3.0",
+    "eslint-config-screwdriver": "^3.0.0",
     "jenkins-mocha": "^4.0.0",
     "mockery": "^2.0.0",
     "sinon": "^2.3.4"
   },
   "dependencies": {
+    "circuit-fuses": "^3.0.0",
+    "ioredis": "^3.1.2",
+    "node-resque": "^4.0.7",
     "screwdriver-executor-base": "^5.2.2"
   },
   "release": {
