--- a/config/default.yaml
+++ b/config/default.yaml
@@ -23,6 +23,14 @@ executor:
 
         # Launcher container tag to use
         launchVersion: stable
+#     jenkins:
+#       options:
+#         # Configuration of Jenkins
+#         jenkins:
+#             host: jenkins.default
+#             port: 8080
+#             username: screwdriver
+#             password: "WOW-AN-EVEN-MORE-INSECURE-PASSWORD!!!!"
 
 ecosystem:
     # Externally routable URL for the User Interface
