--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "node-resque": "^4.0.7",
     "request": "^2.81.0",
     "screwdriver-executor-docker": "^2.2.2",
+    "screwdriver-executor-jenkins": "^2.0.0",
     "screwdriver-executor-k8s": "^10.3.4",
     "screwdriver-executor-k8s-vm": "^1.1.3",
     "screwdriver-executor-router": "^1.0.1",
