--- a/package.json
+++ b/package.json
@@ -42,9 +42,14 @@
   },
   "dependencies": {
     "circuit-fuses": "^3.0.0",
+    "cron-parser": "^2.5.0",
+    "hoek": "^5.0.3",
     "ioredis": "^3.1.2",
     "node-resque": "^4.0.7",
-    "screwdriver-executor-base": "^5.2.2"
+    "screwdriver-executor-base": "^6.1.0",
+    "request": "^2.85.0",
+    "string-hash": "^1.1.3",
+    "winston": "^2.3.1"
   },
   "release": {
     "debug": false,
